# -B2BAK-B2B-Procure-to-Pay-

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  health_login.html  health_root.html  live_login.html  live_signin.html  login_raw.txt  login_raw2.txt  tmp_app_after_fix.html  tmp_login_accept.html  tmp_login_after_fix.html  tmp_login_after_ready.html  tmp_login_check2.html  tmp_login_final.html  tmp_login_full.html  tmp_login_guarded.html  tmp_login_htmlaccept.html  tmp_login_nomw.html  tmp_login_now.html  tmp_login_response.html  tmp_root_full.html
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: audit.py  config.py  deps.py  exceptions.py  main.py  middleware.py  models.py  queue.py  schemas.py  security.py
backend/app/routers/: audit.py  auth.py  deals.py  helper.py  invites.py  messages.py  notifications.py  quotes.py  requests.py
backend/app/scripts/: seed.py
backend/migrations/: env.py
backend/migrations/versions/: 20260218_0001_init.py  20260219_0002_notifications_invites.py  20260219_0003_user_profile_preferences.py
backend/tests/: conftest.py
docs/: defaults.json
frontend/: .dockerignore  .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: global-error.tsx  layout.tsx  page.tsx
frontend/components/: providers.tsx
frontend/lib/: api.ts  rbac.ts  types.ts  utils.ts
frontend/pages/: 404.tsx  _app.tsx  classic-login.tsx  (+3 more)
infra/: docker-compose.yml
(+35 files in other folders)
